--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "ajax": "0.0.4",
     "antd": "^4.6.6",
+    "axios": "^0.20.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.7",
     "pg": "^8.3.3",
