--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.6.6",
     "axios": "^0.20.0",
+    "bibtex-parse": "^2.1.0",
+    "bibtex-parse-js": "0.0.24",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.7",
     "pg": "^8.3.3",
